chat design and forgot password completed

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ DATABASE = 'mongodb+srv://Faisal:Kkn9946099846@cluster0.n6kycop.mongodb.net/?ret
 ADMIN_MAIL_ID = "k01009526@gmail.com"
 ADMIN_PASSWORD = "fmwasxmdwasoqddk"
 USER_JWT_SECRET = "jwtSecret"
+ADMIN_JWT_SECRET = "adminJwtSecret"
